[package]
name = "world-builder"
version = "0.1.0"
edition = "2024"
authors = ["Ztry8 (AslanD)"]
description = "Lightweight and simple heightmap generator for open-world game landscapes"
readme = "README.md"
repository = "https://github.com/Ztry8/WorldBuilder"
license = "BSD-3-Clause"
keywords = ["gamedev", "world", "generator", "heightmap", "openworld"]

[dependencies]
noise = "0.9"
image = {version = "0.25.8", default-features = false, features = ["png"]}

[profile.dev.package.'*']
strip = true
debug = false
opt-level = 3
codegen-units = 1

[profile.release]
strip = true
debug = false
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
